# fortis

./: CLAUDE.md  Cargo.toml  LICENSE  README.md  package.json  pnpm-lock.yaml  svelte.config.js  vite.config.js
.github/workflows/: ci.yml
src/: audio.rs  config.rs  event_handler.rs  main.rs  state.rs  transcribers.rs  tui.rs  ui.rs  widgets.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/transcribers/: deepgram.rs
src/widgets/: device_dialog.rs  footer.rs  settings_dialog.rs  transcriptions.rs
