[package]
name = "fortis"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "fortis"
path = "src/main.rs"

[dependencies]
deepgram = "0.7"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
cpal = "0.13"
dotenv = "0.15.0"
chrono = "0.4"
hound = "3.5"
async-trait = "0.1"
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
directories = "5.0"
